<resources>
    <!--  Welcome Screen Resources  -->
    <string name="app_name">BookShelf</string>
    <string name="app_desc_slogan">Organize, Monitor, Share</string>
    <string name="welcome_message">Welcome to BookShelf</string>>
    <string name="app_desciption">A platform for users to record owned books and loan books to other users. </string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="add_picture">Add Picture</string>
    <string name="title_activity_view_location1">Map</string>
    <string name="icon">CommonsWare logo</string>

</resources>